tests/invalid/class_no_init/main.py
class Foo:
    x: int

f: Foo = Foo()
